--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>WebRTC GStreamer Viewer</title>
+		<title>Virtual Display</title>
 	</head>
 	<body>
-		<h1>WebRTC Streaming Viewer</h1>
-		<p id="status">Esperando...</p>
-		<video id="stream" autoplay playsinline controls style="width: 100%; max-width: 800px"></video>
+		<h1>Virtual Display</h1>
+		<video id="stream" autoplay playsinline controls style="width: 100%; margin: 4px"></video>
 		<script src="client.js"></script>
 	</body>
 </html>
