puesto arranque y apagado automatico de gstream junto con el server.js, arreglado el problema de los emoji en gstream y recuperado el .desktop con los iconos

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Virtual Display</title>
+		<link rel="icon" href="../virtualScreenOn.png" type="image/x-icon" />
 	</head>
 	<body>
 		<h1>Virtual Display</h1>
